--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "PostgreSQLConnection": "Host=dpg-crreah5svqrc73b7jva0-a.oregon-postgres.render.com;Database=gameapp_db_2y2a;Username=gameapp_db_2y2a_user;Password=yXPOfHDRsslCypUNPiK48zs4rGbKNXEH;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
